@@ -188,7 +188,7 @@ function print_usage() {
   if [ -z "$CMD" ]; then
     echo ""
     echo "Usage: solr COMMAND OPTIONS"
-    echo "       where COMMAND is one of: start, stop, restart, status, healthcheck, create, create_core, create_collection, delete"
+    echo "       where COMMAND is one of: start, stop, restart, status, healthcheck, create, create_core, create_collection, delete, version"
     echo ""
     echo "  Standalone server example (start Solr running in the background on port 8984):"
     echo ""
@@ -500,12 +500,16 @@ function stop_solr() {
 
 if [ $# -eq 1 ]; then
   case $1 in
-    -help|-usage)
+    -help|-usage|-h|--help)
         print_usage ""
         exit
     ;;
     -info|-i|status)
         get_info
+        exit
+    ;;
+    -version|-v|version)
+        run_tool version
         exit
     ;;
   esac
